@@ -7,6 +7,7 @@
 * Error emitted when adding a host via the "Hosts" drop-down (Debian bug ID #578208)
 * Pastes uses a strange keyboard layout (Debian bug ID #364565)
 * Cope with being invoked by 'clusterssh' (Debian bug ID #644368)
+* Fix migration of .csshrc when not working as expected (Debian bug ID #673507)
 
 2012-12-09 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.01_02
 * Fix logic when using 'autoclose' on the command line or config file
